Add Google fonts to project

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: system-ui, sans-serif;
+    font-family: "Roboto";
     line-height: 1.5;
     background-color: #f9f9f9;
     color: #333;
@@ -46,6 +46,11 @@ body {
     font-weight: 400;
     margin: 0;
     line-height: 1.2;
+    font-family: "Playfair Display";
+}
+
+.hero-text-card h2 {
+    font-family: "Playfair Display";
 }
 
 .hero-text-card {
@@ -60,9 +65,10 @@ body {
     gap: 1rem;
 }
 
-.my-work h2 {
+.my-work h2, h3 {
     text-align: center;
     margin-bottom: 1rem;
+    font-family: "Playfair Display";
 }
 
 .work-grid {
@@ -84,6 +90,7 @@ body {
     padding: 2rem;
     text-align: center;
     font-weight: bold;
+    font-family: "Playfair Display";
 }
 
 .work-info {
@@ -107,6 +114,10 @@ body {
 
 .contact-info {
     text-align: center;
+}
+
+.contact-info h2 {
+    font-family: "Playfair Display";
 }
 
 .contact-icons p {
