--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
     line-height: 1.5;
     background-color: #f9f9f9;
     color: #333;
-    padding: 1rem;
 }
 
 .hero {
@@ -152,6 +151,7 @@ body {
     margin-top: 2rem;
     align-items: center;
     background-color: #2596be;
+    padding: 2rem 3rem;
 }
 
 .work-header {
@@ -198,7 +198,7 @@ body {
     height: auto;
     max-width: 300px;
     display: block;
-    margin: 2rem auto 0;
+    margin: 0 auto;
     aspect-ratio: 2 / 2;
 }
 
