Align contact section text

--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ body {
     margin-top: 2rem;
     align-items: center;
     background-color: #2596be;
-    padding: 2rem 3rem;
+    padding: 2rem 1rem;
 }
 
 .work-header {
@@ -173,6 +173,22 @@ body {
 
 .contact-info h2 {
     font-family: "Playfair Display";
+    font-weight: 400;
+    font-size: 2rem;
+    margin-bottom: 1.2rem;
+    text-align: center;
+}
+
+.contact-info p:first-of-type {
+    font-size: 1.2rem;
+    text-align: left;
+    margin-bottom: 1rem;
+}
+
+.contact-info p:not(first-of-type) {
+    font-size: 0.9rem;
+    text-align: left;
+    margin-top: 0.5rem;
 }
 
 .contact-icons p {
@@ -182,7 +198,7 @@ body {
 
 .social-icons {
     color: black;
-    margin-top: 1rem;
+    margin-top: 2rem;
     display: flex;
     justify-content: center;
     align-items: center;
