--- a/style.css
+++ b/style.css
@@ -245,7 +245,7 @@ body {
 
     .hero-photo-card h1 {
         position: absolute;
-        left: 100%;
+        top: -50px;
         padding-left: 1rem;
         white-space: nowrap;
         z-index: 3;
@@ -264,6 +264,26 @@ body {
         height: 18rem;
         width: 23rem;
     }
+
+    .hero::before {
+        content: "Ashley Williams";
+        position: absolute;
+        top: 0rem;
+        left: 18rem;
+        font-size: 2.6rem;
+        font-family: "Playfair Display";
+        font-weight: 400;
+        color: white;
+        z-index: 10;
+        white-space: nowrap;
+    }
+    
+    .hero-photo-card h1 {
+        opacity: 0;
+        visibility: hidden;
+    }
+
+
 
     .hero-gradient-wrapper {
         clip-path: polygon(0 0, 100% 0, 100% 60%, 0 100%);
