--- a/style.css
+++ b/style.css
@@ -439,6 +439,12 @@ body {
             font-size: 2.1rem;
         }
 
+        .work-grid {
+            grid-template-columns: repeat(3, 1fr);
+            max-width: 1100px;
+            margin: 0 auto;
+            gap: 2rem;
+        }
    
 
     }
