--- a/style.css
+++ b/style.css
@@ -93,7 +93,13 @@ body {
     gap: 1rem;
 }
 
-.my-work h2, h3 {
+.my-work h2 {
+    margin-bottom: 1rem;
+    font-family: "Playfair Display";
+    text-align: center;
+}
+
+.my-work h3 {
     text-align: center;
     margin-bottom: 1rem;
     font-family: "Playfair Display";
@@ -366,6 +372,18 @@ body {
         object-fit: cover;
     }
 
+    .my-work h2 {
+        margin-bottom: 1rem;
+        font-family: "Playfair Display";
+        text-align: left;
+    }
+    
+    .my-work h3 {
+        text-align: left;
+        margin-bottom: 1rem;
+        font-family: "Playfair Display";
+    }
+
     /* Desktop Layout */
     
     @media (min-width: 1024px) {
@@ -445,7 +463,7 @@ body {
             margin: 0 auto;
             gap: 2rem;
         }
-   
+
 
     }
 }
