--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ h2, h3 {
     padding: 5rem;
     font-size: 1.8rem;
     text-align: center;
-    font-weight: bold;
+    font-weight: 500;
     font-family: "Playfair Display";
 }
 
@@ -276,7 +276,7 @@ h2, h3 {
     .hero-photo-card {
         position: absolute;
         top: 2rem;
-        left: 5rem;
+        left: 15rem;
         z-index: 2;
         aspect-ratio: 1 / 1;
     }
@@ -293,7 +293,7 @@ h2, h3 {
         position: absolute;
         top: 4rem;
         right: 2.5rem;
-        left: 10rem;
+        left: 21rem;
         z-index: 1;
         background: white;
         padding: 1rem;
@@ -307,7 +307,7 @@ h2, h3 {
         content: "Ashley Williams";
         position: absolute;
         top: 0rem;
-        left: 18rem;
+        left: 25rem;
         font-size: 2.6rem;
         font-family: "Playfair Display";
         font-weight: 400;
@@ -343,7 +343,7 @@ h2, h3 {
 
     .work-grid {
         grid-template-columns: repeat(2, 1fr);
-        max-width: 900px;
+        max-width: 700px;
         margin: 0 auto;
         gap: 2rem;
     }
@@ -378,6 +378,7 @@ h2, h3 {
         display: flex;
         align-items: center;
         justify-content: center;
+        margin-bottom: 1rem;
     }
 
     .contact-photo img {
@@ -391,8 +392,10 @@ h2, h3 {
         margin-bottom: 1rem;
         font-family: "Playfair Display";
         text-align: left;
+        margin-left: 1rem;
+        padding-left: 0;
     }
-    
+
     .my-work h3 {
         text-align: left;
         margin-bottom: 1rem;
