--- a/style.css
+++ b/style.css
@@ -394,6 +394,7 @@ h2, h3 {
         text-align: left;
         margin-left: 1rem;
         padding-left: 0;
+        font-size: 2rem;
     }
 
     .my-work h3 {
@@ -502,6 +503,7 @@ h2, h3 {
             max-width: 1100px;
             margin: 0 auto;
             margin-bottom: 2rem;
+            font-size: 2.5rem;
         }
 
         .contact-info {
